unpackaged/main/default/objects/VRTS_Observation__c/VRTS_Observation__c.object-meta.xml
<CustomObject>
    <label>VRTS Observation</label>
    <nameField>
        <displayFormat>VRTSO-{000000}</displayFormat>
        <label>VRTS Observation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VRTS_Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>