unpackaged/main/default/objects/VRTS_Observation__c/fields/ET_Bus_Internal_No__c.field-meta.xml
<CustomField>
    <fullName>ET_Bus_Internal_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Internal No</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>VRTS_Observations</relationshipLabel>
    <relationshipName>VRTS_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>