unpackaged/main/default/objects/VRTS_Observation__c/fields/Final_Result__c.field-meta.xml
<CustomField>
    <fullName>Final_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>