unpackaged/main/default/objects/VRTS_Observation__c/fields/Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>