unpackaged/main/default/objects/VRTS_Observation__c/fields/Plate_Issue__c.field-meta.xml
<CustomField>
    <fullName>Plate_Issue__c</fullName>
    <formula>ET_Bus_Internal_No__r.Plate_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plate Issue</label>
    <type>Text</type>
</CustomField>