unpackaged/main/default/objects/VRTS_Observation__c/fields/Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Plate_Number__c</fullName>
    <formula>ET_Bus_Internal_No__r.Plate_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plate Number</label>
    <type>Text</type>
</CustomField>