unpackaged/main/default/objects/VRTS_Observation__c/fields/Sim_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Sim_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sim Card Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>