unpackaged/main/default/objects/VRTS_Observation__c/fields/Staff_Details__c.field-meta.xml
<CustomField>
    <fullName>Staff_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Staff Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>