unpackaged/main/default/objects/VRTS_Observation__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>Station</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branch__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baniyas Station</fullName>
                <label>Baniyas Station (محطة بني ياس)</label>
            </value>
            <value>
                <fullName>Musaffah Station 1 - Capital</fullName>
                <label>Musaffah Station 1 - Capital (محطة مصفح 1 - العاصمة)</label>
            </value>
            <value>
                <fullName>Mussafah Station 2</fullName>
                <label>Mussafah Station 2 (محطة مصفح 2)</label>
            </value>
            <value>
                <fullName>Mussafah Station 3</fullName>
                <label>Mussafah Station 3 (محطة مصفح 3)</label>
            </value>
            <value>
                <fullName>Al Falah Station</fullName>
                <label>Al Falah Station (محطة الفلاح)</label>
            </value>
            <value>
                <fullName>Shahama Station</fullName>
                <label>Shahama Station (محطة الشهامة)</label>
            </value>
            <value>
                <fullName>Ajman Station</fullName>
                <label>Ajman Station (محطة عجمان)</label>
            </value>
            <value>
                <fullName>Al Foah Station</fullName>
                <label>Al Foah Station (محطة الفوعة)</label>
            </value>
            <value>
                <fullName>Cataract Station</fullName>
                <label>Cataract Station (محطة الساد)</label>
            </value>
            <value>
                <fullName>Mazyad Station</fullName>
                <label>Mazyad Station (محطة مزيد)</label>
            </value>
            <value>
                <fullName>Al Ain Industrial Station</fullName>
                <label>Al Ain Industrial Station (محطة صناعية العين)</label>
            </value>
            <value>
                <fullName>Al Dhaid Station</fullName>
                <label>Al Dhaid Station (محطة الذيد)</label>
            </value>
            <value>
                <fullName>Masfoot Station</fullName>
                <label>Masfoot Station (محطة مصفوت)</label>
            </value>
            <value>
                <fullName>um Al Quwain Station</fullName>
                <label>um Al Quwain Station (محطة أم القوين)</label>
            </value>
            <value>
                <fullName>Al Quoz Station</fullName>
                <label>Al Quoz Station (محطة القوز)</label>
            </value>
            <value>
                <fullName>Al Qusais Station</fullName>
                <label>Al Qusais Station (محطة القصيص)</label>
            </value>
            <value>
                <fullName>um Ramool Station</fullName>
                <label>um Ramool Station (محطة أم الرمول)</label>
            </value>
            <value>
                <fullName>Al Warsan Station</fullName>
                <label>Al Warsan Station (محطة الورسان)</label>
            </value>
            <value>
                <fullName>Al Hail Station</fullName>
                <label>Al Hail Station (محطة الحيل)</label>
            </value>
            <value>
                <fullName>Dibba Al Fujairah Station</fullName>
                <label>Dibba Al Fujairah Station (محطة دبا الفجيرة)</label>
            </value>
            <value>
                <fullName>Kalba Station</fullName>
                <label>Kalba Station (محطة كلباء)</label>
            </value>
            <value>
                <fullName>Khorfakkan Station</fullName>
                <label>Khorfakkan Station (محطة خورفكان)</label>
            </value>
            <value>
                <fullName>Al Dhait Station</fullName>
                <label>Al Dhait Station (محطة الظيت)</label>
            </value>
            <value>
                <fullName>Al Nakheel Station</fullName>
                <label>Al Nakheel Station (محطة النخيل)</label>
            </value>
            <value>
                <fullName>Rams Station</fullName>
                <label>Rams Station (محطة الرمس)</label>
            </value>
            <value>
                <fullName>Ghalila Station</fullName>
                <label>Ghalila Station (محطة غليلة)</label>
            </value>
            <value>
                <fullName>Azra Station</fullName>
                <label>Azra Station (محطة العزره)</label>
            </value>
            <value>
                <fullName>Clues Station</fullName>
                <label>Clues Station (محطة القرائن)</label>
            </value>
            <value>
                <fullName>Sharjah Industrial Station</fullName>
                <label>Sharjah Industrial Station (محطة صناعية الشارقة)</label>
            </value>
            <value>
                <fullName>Al Dhafra Station</fullName>
                <label>Al Dhafra Station (محطة الظفرة)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>