unpackaged/main/default/objects/VRTS_Observation__c/validationRules/Inspection_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspection_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
   ISNEW(), ISCHANGED(Inspection_Date__c)),
   Inspection_Date__c &lt; TODAY(), 
   $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>Inspection_Date__c</errorDisplayField>
    <errorMessage>Inspection date should not be in past</errorMessage>
</ValidationRule>